tests/rosetta/out/Zig/archimedean-spiral.error
zig build: exit status 1
/tmp/archimedean-spiral.zig:8:19: error: function parameter shadows declaration of 'a'
/tmp/archimedean-spiral.zig:18:1: note: declared here
